--- a/src/index.html
+++ b/src/index.html
@@ -13,26 +13,42 @@
     <div class="container" style="width: 650px;">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="text-center">SWAP</h1>
+          <h1 class="text-center">Minimal Swap PoC</h1>
           <hr/>
           <br/>
           <div id="loader">
             <p class="text-center">Loading...</p>
           </div>
           <div id="content" style="display: none;">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Name</th>
-                  <th scope="col">Balance</th>
-                </tr>
-              </thead>
-              <tbody id="swapResults">
-              </tbody>
-            </table>
+            <div id="alice">
+              <h2>Alice</h2>
+              <p id="accountAddress"></p>
+              <p id="aliceBalance"></p>
+            </div>
+            <div id="aliceSwap">
+              <h2>Alice Swap</h2>
+            </div>
+            <div id="bob">
+              <h2>Bob</h2>
+            </div>
+            <div id="bobSwap">
+              <h2>Bob Swap</h2>
+            </div>
+
+            <!-- <table class="table"> -->
+            <!--   <thead> -->
+            <!--     <tr> -->
+            <!--       <th scope="col">#</th> -->
+            <!--       <th scope="col">Name</th> -->
+            <!--       <th scope="col">Balance</th> -->
+            <!--     </tr> -->
+            <!--   </thead> -->
+            <!--   <tbody id="swapResults"> -->
+            <!--   </tbody> -->
+            <!-- </table> -->
+
             <hr/>
-            <p id="accountAddress" class="text-center"></p>
+            <!-- <p id="accountAddress" class="text-center"></p> -->
           </div>
         </div>
       </div>
