Show ERC20 balance

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,10 @@
             <div id="alice">
               <h2>Alice</h2>
               <p id="accountAddress"></p>
-              <p id="aliceBalance"></p>
+              <p id="aliceETHBalance"></p>
+              <p id="aliceERC20Balance"></p>
+              <!-- TODO: Add a button here, show erc20 token balance, etc -->
+
             </div>
             <div id="aliceSwap">
               <h2>Alice Swap</h2>
