Mint ERC20 balance with a button

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
               <p id="aliceERC20Balance"></p>
               <!-- TODO: Add a button here, show erc20 token balance, etc -->
 
+              <form onSubmit="App.mint(); return false;">
+                <button type="submit" class="btn btn-primary">Mint</button>
+              </form>
+
             </div>
             <div id="aliceSwap">
               <h2>Alice Swap</h2>
