Sign cheque works

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,12 @@
               </form>
               </p>
 
+              <p>
+              <form onSubmit="App.signCheque(); return false;">
+                <button type="submit" class="btn btn-primary">Sign cheque</button>
+              </form>
+              </p>
+
             </div>
             <div id="aliceSwap">
               <h2>Alice Swap</h2>
