Add cheque to UI and fix promise/await stuff

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
               <h2>Alice Swap</h2>
               <p id="aliceSwapAddress"></p>
               <p id="aliceSwapBalance"></p>
+              <p id="aliceCheque"></p>
             </div>
             <div id="bob">
               <h2>Bob</h2>
