Basic redeem cheque
Goes through but buggy though, no ERC20 balance showing up

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,13 @@
             </div>
             <div id="bob">
               <h2>Bob</h2>
+
+              <p>
+              <form onSubmit="App.redeemCheque(); return false;">
+                <button type="submit" class="btn btn-primary">Redeem cheque</button>
+              </form>
+              </p>
+
             </div>
             <div id="bobSwap">
               <h2>Bob Swap</h2>
