--- a/src/index.html
+++ b/src/index.html
@@ -77,23 +77,11 @@
             </div>
             <div id="bobSwap">
               <h2>Bob Swap</h2>
-            </div>
-
-            <!-- <table class="table"> -->
-            <!--   <thead> -->
-            <!--     <tr> -->
-            <!--       <th scope="col">#</th> -->
-            <!--       <th scope="col">Name</th> -->
-            <!--       <th scope="col">Balance</th> -->
-            <!--     </tr> -->
-            <!--   </thead> -->
-            <!--   <tbody id="swapResults"> -->
-            <!--   </tbody> -->
-            <!-- </table> -->
-
-            <hr/>
-            <!-- <p id="accountAddress" class="text-center"></p> -->
+              <p id="bobSwapAddress"></p>
+              <p id="bobSwapBalance"></p>
+              <!-- <p id="aliceCheque"></p> -->
           </div>
+              <hr/>
         </div>
       </div>
     </div>
